<resources>
    <string name="store_picture_title">Save image</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_android_wear_update_text">"%1$s won't run unless you update the Android Wear app."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log in…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged in</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not logged in</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="abs__searchview_description_search">Search</string>
    <string name="abs__searchview_description_query">Search query</string>
    <string name="abs__searchview_description_clear">Clear query</string>
    <string name="abs__searchview_description_submit">Submit query</string>
    <string name="abs__searchview_description_voice">Voice search</string>
    <string name="premium_app_post_token" />
    <string name="live_relic">AA1f094c59a4d68c1d34de5ee465ed666661edf576</string>
    <string name="fb_app_id">468247336528413</string>
    <string name="google_map_api_key">0_C51e2WQ5C_Zx4dHP-l9PgZGY3VWEI0-pALS2A</string>
    <string name="support_map_fragment_key">AIzaSyBoCxl59QD08NIgGB0V35pgAT67QZGlpi8</string>
    <string name="kahuna_live">a7e66bf8b20e412eb8c8c51b23a1ac23</string>
    <string name="kahuna_stage">aa13fc46b5174f52bcd22927fe23c17f</string>
    <string name="project_id_live">862991334027</string>
    <string name="project_id_stage">992885134371</string>
    <string name="emailHint">Email Address</string>
    <string name="passwordHint">Password</string>
    <string name="facebook_login">Login with Facebook</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="takePhoto">Take Photo</string>
    <string name="pickPhoto">Choose from Library</string>
    <string name="name_of_the_delivery_service">Name of the delivery service*</string>
    <string name="street">Street</string>
    <string name="place">City*</string>
    <string name="comment">Comment</string>
    <string name="propose_service_button_text">Recommend a Delivery Service</string>
    <string name="nr_text">No</string>
    <string name="deliver_email">Email*</string>
    <string name="sort_alphabetically">Alphabetical</string>
    <string name="rate_app_content">We are always striving to make the app even better and easier, to make the food-ordering more fun! Thanks for your feedback. How do you like the Pyszne.pl app?</string>
    <string name="discount">Voucher</string>
    <string name="sort_by_name">Name</string>
    <string name="sort_by_reviews">Number of Reviews</string>
    <string name="sort_by_ratings">Best Review</string>
    <string name="filter_only_opened">Open delivery services only</string>
    <string name="filter_only_online">Online payment only</string>
    <string name="filter_enabled">Reset</string>
    <string name="filterMinCost">Minimum order value</string>
    <string name="filterDeliveryCost">Shipping costs</string>
    <string name="sort_by_distance">Distances</string>
    <string name="filter_stampel">My stamps</string>
    <string name="stempel_cards">Stamp Card</string>
    <string name="rebates_info_dialog">Now you can redeem a New Customer Discount / Voucher or collect a Stamp for your order!</string>
    <string name="rebates_info_dialog_newcustomer">Delivery service with this symbol grants you on your first order a New Customer Discount.</string>
    <string name="rebates_info_dialog_rebate">Delivery service with this symbol grants you discount on any order.</string>
    <string name="rebates_info_dialog_stamp">You will receive a Stamp for every order without discount. For example: You have ordered 5x for 15 zł in this delivery service, on your 6th order you will get an advantage over zł 7.50. This corresponds to a loyalty bonus of 10%.</string>
    <string name="dont_show_this_info_again">Do not show this info again</string>
    <string name="twenty_percent">20 %</string>
    <string name="eight_units">8,00 zł</string>
    <string name="one_five">1/5</string>
    <string name="newcustomer_rebate_dialog">New Customer Discount</string>
    <string name="stempel_dialog">Stamp Card</string>
    <string name="stars5">5 stars</string>
    <string name="stars4">4 stars</string>
    <string name="stars3">3 stars</string>
    <string name="stars2">2 stars</string>
    <string name="star1">1 star</string>
    <string name="rate_later">Rate later</string>
</resources>