<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:id="@id/propose_scrollableView" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:background="@drawable/address_edit_bg" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip">
            <EditText android:textColorHint="#ff555555" android:id="@id/ProposeEmail" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:hint="@string/deliver_email" android:lines="1" android:inputType="textCapSentences" />
            <EditText android:textColorHint="#ff555555" android:id="@id/ProposeServiceName" android:nextFocusDown="@id/ProposeStreet" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:hint="@string/name_of_the_delivery_service" android:lines="1" android:inputType="textCapSentences">
                <requestFocus />
            </EditText>
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip">
                <EditText android:textColorHint="#ff555555" android:id="@id/ProposeStreet" android:nextFocusDown="@id/ProposeHouseNr" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/street" android:lines="1" android:layout_weight="1.0" android:inputType="textCapSentences" />
                <EditText android:textColorHint="#ff555555" android:id="@id/ProposeHouseNr" android:nextFocusDown="@id/ProposeLocation" android:layout_width="50.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:hint="@string/nr_text" android:lines="1" android:layout_weight="0.0" android:inputType="text" />
            </LinearLayout>
            <EditText android:textColorHint="#ff555555" android:id="@id/ProposeLocation" android:nextFocusDown="@id/ProposeComment" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:hint="@string/place" android:lines="1" android:inputType="textCapSentences" />
            <EditText android:textColorHint="#ff555555" android:gravity="top" android:id="@id/ProposeComment" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:hint="@string/comment" android:lines="5" android:inputType="textMultiLine" />
            <Button android:layout_gravity="center_horizontal" android:id="@id/ProposeSubmitButton" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:text="@string/propose_service_button_text" style="@style/green_button" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>