<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:id="@id/takePictureLL" android:background="#ffe7e7e7" android:padding="8.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="3.0dip">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/takePhoto" />
    </LinearLayout>
    <LinearLayout android:gravity="center_horizontal" android:id="@id/choosePictureLL" android:background="#ffe7e7e7" android:padding="8.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="3.0dip">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pickPhoto" />
    </LinearLayout>
    <LinearLayout android:gravity="center_horizontal" android:id="@id/cancelLL" android:background="#ffe7e7e7" android:padding="8.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="3.0dip">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel_button_text" />
    </LinearLayout>
</LinearLayout>